Fixed issue with Year and styling
1. Fixed issue with Bar Chart not showing month and year correctly
2. Fixed global styling

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,82 +2,69 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 47.4% 11.2%;
+html,
+body,
+main {
+  @apply bg-gray-1 text-gray-12;
+  font-weight: 300;
+}
 
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
+* {
+  @apply selection:bg-[#2200ff] selection:text-white;
+  box-sizing: border-box;
+}
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 47.4% 11.2%;
+a {
+  @apply focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-blue-9;
+  color: inherit;
+  text-decoration: none;
+}
 
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
+div#__next,
+div#__next > div,
+div#__next > div > main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 47.4% 11.2%;
+/* For WebKit-based browsers (Chrome, Safari, and Opera) */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
 
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
+/* For IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 100% 50%;
-    --destructive-foreground: 210 40% 98%;
-
-    --ring: 215 20.2% 65.1%;
-
-    --radius: 0.5rem;
+@supports (-webkit-touch-callout: none) {
+  .min-h-screen {
+    height: -webkit-fill-available;
   }
-
-  .dark {
-    --background: 224 71% 4%;
-    --foreground: 213 31% 91%;
-
-    --muted: 223 47% 11%;
-    --muted-foreground: 215.4 16.3% 56.9%;
-
-    --accent: 216 34% 17%;
-    --accent-foreground: 210 40% 98%;
-
-    --popover: 224 71% 4%;
-    --popover-foreground: 215 20.2% 65.1%;
-
-    --border: 216 34% 17%;
-    --input: 216 34% 17%;
-
-    --card: 224 71% 4%;
-    --card-foreground: 213 31% 91%;
-
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 1.2%;
-
-    --secondary: 222.2 47.4% 11.2%;
-    --secondary-foreground: 210 40% 98%;
-
-    --destructive: 0 63% 31%;
-    --destructive-foreground: 210 40% 98%;
-
-    --ring: 216 34% 17%;
-
-    --radius: 0.5rem;
+  .h-screen {
+    height: -webkit-fill-available;
   }
 }
 
-@layer base {
-  * {
-    @apply border-border;
-  }
-
-  body {
-    @apply bg-background text-foreground;
-    font-feature-settings: "rlig" 1, "calt" 1;
-  }
+.recharts-cartesian-grid-horizontal > line {
+  @apply stroke-gray-6;
 }
 
+.recharts-cartesian-grid-vertical > line {
+  @apply stroke-gray-6;
+  stroke-dasharray: 2 2;
+}
+
+.recharts-tooltip-cursor {
+  @apply fill-gray-5;
+}
+
+.recharts-tooltip-wrapper:focus {
+  outline: none;
+}
+
+.recharts-cartesian-axis-tick-value {
+  @apply fill-gray-11;
+}
